<resources>
    <string name="app_name">RajpathRecalls</string>
    <string name="sync_text">SYNC</string>
    <string name="syncing_text">SYNCING</string>
    <string name="pause_play_content_descrip">pause_play</string>
    <string name="listen_menu_title">Listen</string>
    <string name="chat_menu_title">Live Chat</string>
    <string name="connection_failed_text">Connection Failed</string>
    <string name="retry_text">RETRY</string>
    <string name="connection_established_text">Connection established</string>
    <string name="synced_confirmation_msg">Synced to livestream</string>
    <plurals name="elapsed_seconds">
        <item quantity="one">%1$d second behind livestream</item>
        <item quantity="other">%1$d seconds behind livestream</item>
    </plurals>
    <string name="elapsed_minutes">%1$d:%2$02d minutes behind livestream</string>
    <string name="connecting_text">Establishing connection…</string>
    <string name="now_playing_text">Now Playing</string>
    <string name="more_menu_title">More</string>
    <string name="preferences_text">Preferences</string>
    <string name="video_setting_text">Background Video</string>
    <string name="notification_setting_text">Event Notifications</string>
    <string name="sleep_timer_setting">Sleep Timer</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="instagram_text">Instagram</string>
    <string name="facebook_text">Facebook</string>
    <string name="mail_text">Mail</string>
    <string name="about_text">About</string>
    <string name="build_version_text">Build Version</string>
    <string name="contribute_text">Contribute</string>
    <string name="share_text">Share</string>
    <plurals name="sleep_timer_remaining_time">
        <item quantity="one">Stopping playback in %1$d minute</item>
        <item quantity="other">Stopping playback in %1$d minutes</item>
    </plurals>
    <string name="okay_text">OKAY</string>
    <string name="cancel_text">@android:string/cancel</string>
    <plurals name="sleep_dialog_title">
        <item quantity="one">Stop playback in %1$d minute</item>
        <item quantity="other">Stop playback in %1$d minutes</item>
    </plurals>
    <string name="coming_up_title">Coming Up Today</string>
    <string name="empty_schedule_text">There are no scheduled events at the moment. Feel free to listen
        to some great tunes while you wait. Tap here to dismiss this message.</string>
    <string name="share_intent_message">Hey! I\'ve been listening to Rajpath RECalls. You can check
        it out at rajpathrecalls.web.app or get the app at
        https://play.google.com/store/apps/details?id=com.nitc.rajpathrecalls</string>
    <string name="message_box_default">Type a message</string>
    <string name="send_content_descrip">edit/send message</string>
    <string name="bg_video_error_toast">Background video not supported</string>
    <string name="random_text">RANDOM</string>
    <string name="events_menu_title">Events</string>
    <string name="event_fragment_title">Our Events</string>
    <string name="view_live_feed">View Live Feed</string>
</resources>