<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/ripple_bg"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/sleep_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:value="30"
        android:valueFrom="1"
        android:valueTo="60"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        app:thumbColor="@color/colorAccent"
        app:trackColorActive="@color/colorAccentHalf"
        app:trackColorInactive="@color/colorPrimaryHalf"/>

    <TextView
        android:id="@+id/okay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:background="@drawable/ripple_bg"
        android:text="@string/okay_text"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ripple_bg"
        android:textAllCaps="true"
        android:text="@string/cancel_text"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/okay_btn"
        app:layout_constraintEnd_toStartOf="@+id/okay_btn"
        app:layout_constraintTop_toTopOf="@+id/okay_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>